<resources>
    <string name="app_name">MobileMandatoryAssignment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="logincreate_fragment_label">First Fragment</string>
    <string name="loggedin_fragment_label">Welcome!</string>
    <string name="feed_fragment_label">Second Fragment</string>
    <string name="delete_fragment_label">Second Fragment</string>
    <string name="singlemessage_fragment_label">Second Fragment</string>
    <string name="comments_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>